--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rt-chess",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "vite dev --port 3333",
     "build": "vite build",
